--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7397,6 +7397,8 @@ nav:
       - translations/bedrock-wiki/index.md
       - <samp>wiki.bedrock.dev</samp>:
         - translations/bedrock-wiki/wiki-bedrock-dev/index.md
+        - 初学者指南:
+          - translations/bedrock-wiki/wiki-bedrock-dev/guide/index.md
     - bridge.:
       - translations/bridge/index.md
       - <samp>bridge-core.github.io</samp>:
