--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7407,6 +7407,8 @@ nav:
             - '4. 项目设置': translations/bedrock-wiki/wiki-bedrock-dev/guide/project-setup.md
             - '5. 创建自定义物品': translations/bedrock-wiki/wiki-bedrock-dev/guide/custom-item.md
             - '6. 创建自定义实体': translations/bedrock-wiki/wiki-bedrock-dev/guide/custom-entity.md
+            - '7. Blockbench：建模、纹理和动画': translations/bedrock-wiki/wiki-bedrock-dev/guide/blockbench.md
+            - '8. 添加战利品表、生成规则和合成配方': translations/bedrock-wiki/wiki-bedrock-dev/guide/loot-table.md
           - 附录:
             - 安卓项目设置: translations/bedrock-wiki/wiki-bedrock-dev/guide/project-setup-android.md
     - bridge.:
