[fix] 尝试修复无法截断的问题2

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -134,7 +134,8 @@ extra_javascript:
 plugins:
   - search
   - social
-  - blog
+  - blog:
+      post_excerpt_separator: <!-- more -->
   - rss
   - tags
   - minify:
