--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -3,7 +3,9 @@ authors:
     name: Mojang
     description: 官方，原作者
     avatar: /bedrock-docs/assets/images/authors/mojang.ico
+    url: https://github.com/Mojang
   xero:
     name: ProjectXero
     description: 开发者
     avatar: /bedrock-docs/assets/images/authors/xero.jpg
+    url: https://github.com/XeroAlpha
