[fix] 尝试修复缩写边界问题3

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -136,6 +136,7 @@ plugins:
   - social
   - blog:
       post_excerpt_separator: <!-- more -->
+      post_excerpt: required
   - rss
   - tags
   - minify:
