[fix] 尝试修复无法截断的问题3

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -135,7 +135,7 @@ plugins:
   - search
   - social
   - blog:
-      post_excerpt_separator: <!-- more -->
+      post_excerpt_separator: <more/>
       post_excerpt: required
   - rss
   - tags
